PDB-1144 	Dialog for entering a new URL in Dashboards has spacing and alignment issues

--- a/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
+++ b/pentaho-xul-gwt/src/org/pentaho/ui/xul/public/xul.css
@@ -30,6 +30,10 @@ html, body{
 	padding-left:3px;
 }
 
+.promptBoxLabel{
+	padding-left: 5%;
+}
+
 .image-button-over{
 	cursor:pointer;
 }
